<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ledger_entry_title">Kayıt ekle</string>
    <string name="ledger_entry_debt">Borç</string>
    <string name="ledger_entry_payment">Tahsilat</string>
    <string name="ledger_entry_date">Tarih: %1$s</string>
    <string name="ledger_entry_due">Vade</string>
    <string name="ledger_entry_clear_due">Vadeyi kaldır</string>
    <string name="ledger_entry_note">Not</string>
    <string name="ledger_entry_write_error">Kayıt kaydedilemedi. Yeniden deneyin.</string>
    <string name="ledger_photo_description">Kaydın fotoğrafı</string>
    <string name="ledger_photo_capture">Fotoğraf çek</string>
    <string name="ledger_photo_remove">Fotoğrafı kaldır</string>
...
